Fix timer div distortion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,6 @@ footer {
     display: none;
 }
 
-.options {
-    color: black;
+.option {
+    color: red;
 }
